--- a/src/pages/HomePage/components/MostPopularCar/CarCard.css
+++ b/src/pages/HomePage/components/MostPopularCar/CarCard.css
@@ -9,7 +9,7 @@
 .most_car-card img {
   border-radius: 0.375rem; /* rounded-md */
   width: 100%;
-  height: 10rem; /* h-40 */
+  height: 15rem; /* h-40 */
   object-fit: cover;
 }
 
@@ -25,11 +25,11 @@
   color: #4b5563; /* text-gray-600 */
   margin: 10px;
   margin-top: 0px;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
 }
 
 .most_car-card button {
-  margin-top: 0.75rem;
+  /* margin-bottom: 0.75rem; */
   width: 100%;
   border: 3px solid #294872;
   padding: 0.5rem 0.75rem;
