--- a/src/pages/HomePage/components/MostPopularCar/CategoryTabs.css
+++ b/src/pages/HomePage/components/MostPopularCar/CategoryTabs.css
@@ -6,9 +6,9 @@
 
   overflow-x: auto;
   white-space: nowrap;
-  scrollbar-width: none;       /* Firefox */
-  -ms-overflow-style: none;    /* IE 10+ */
-  padding-bottom: 8px;
+  scrollbar-width: none;       
+  -ms-overflow-style: none;    
+
 }
 
 /* Hide scrollbar for Chrome, Safari, Edge */
