--- a/src/pages/HomePage/components/ImportedCar/CarImportCard.css
+++ b/src/pages/HomePage/components/ImportedCar/CarImportCard.css
@@ -20,13 +20,7 @@
   flex-wrap: wrap;
 }
 
-.car-card-content {
-  flex: 1;
-  padding: 20px;
-  max-width: 480px;
-  text-align: left;
-  padding-top: 0px;
-}
+
 
 .car-card-content h2 {
   margin-top: 0px;
@@ -125,12 +119,13 @@
 
 .car-card-content {
   flex: 1;
-  padding: 20px;
+  
   max-width: 480px;
   text-align: left;
 }
 
 .car-card-content h2 {
+  padding-left: 20px;
   margin-top: 0;
   font-size: 30px;
 }
@@ -142,6 +137,7 @@
 }
 
 .card-text {
+  padding-left: 20px;
   font-size: 1rem;
   color: #294872;
   margin: 2px 0;
@@ -149,10 +145,12 @@
 }
 
 .card-list {
+  padding-left: 20px !important;
   list-style: none;
   padding: 0;
-  margin: 0 0 20px 0;
+  margin-bottom:  20px;
 }
+
 
 .card-list li {
   margin: 3px 0;
@@ -170,13 +168,14 @@
   background-color: #1976d2;
   color: white;
   border: none;
-  padding: 10px 20px;
+  padding: 10px 20px ;
   border-radius: 5px;
   cursor: pointer;
   font-size: 17px;
   font-weight: bold;
   transition: background 0.3s ease;
   margin-bottom: 10px;
+  margin-left: 20px;
 }
 
 .card-btn:hover {
