--- a/src/pages/BuyCars/components/BuyCarPage.css
+++ b/src/pages/BuyCars/components/BuyCarPage.css
@@ -102,7 +102,8 @@
 
 .buycar-brand-clear {
   position: absolute;
-  right: 1px;
+  top: 10px;
+  right: 10px;
   background: transparent;
   border: none;
   font-size: 18px;
