--- a/src/pages/SellCars/components/sell_your_car_form.css
+++ b/src/pages/SellCars/components/sell_your_car_form.css
@@ -23,7 +23,7 @@
 .car-form {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  /* gap: 15px; */
 }
 
 .form-row {
@@ -45,7 +45,7 @@
   appearance: none; /* hide default arrow */
   background: #fff;
   cursor: pointer;
-
+  margin-bottom: 15px;
   color: var(--muted);
 }
 
