--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,8 +1,8 @@
 .Hero {
   width: 100%;
-  height: auto;
+  height: 700px;
   background-size: cover;
-  background-position: bottom center;
+  background-position: center center;
   background-repeat: no-repeat;
 }
 
