--- a/src/pages/CarAccessories/components/Accessories.css
+++ b/src/pages/CarAccessories/components/Accessories.css
@@ -58,6 +58,7 @@
   border-bottom: 1px solid var(--acc-brand);
   scrollbar-width: none;
   -ms-overflow-style: none;
+  border-top: none;
 }
 
 .acc-tabs::-webkit-scrollbar {
@@ -170,6 +171,7 @@
 .acc-view-all {
   margin-top: 6px;
   padding: 8px 6px 2px 6px;
+  font-size: 17px;
 }
 
 .acc-back-link {
