--- a/src/pages/HomePage/components/MostPopularCar/CarCard.css
+++ b/src/pages/HomePage/components/MostPopularCar/CarCard.css
@@ -9,7 +9,7 @@
 .most_car-card img {
   border-radius: 0.375rem; /* rounded-md */
   width: 100%;
-  height: 15rem; /* h-40 */
+  height: 320px; /* h-40 */
   object-fit: cover;
 }
 
